--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link  href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet"/>
     <title>Fisheye</title>
   </head>
   <body>
@@ -18,7 +15,8 @@
     <main id="main">
       <div class="photographer_section"></div>
     </main>
-    <script src="scripts/factories/Photographer.js"></script>
+    <script src="scripts/factories/photographer.js"></script>
+
     <script src="scripts/pages/index.js"></script>
     <script src="scripts/pages/photographer.js"></script>
   </body>
