--- a/photographer.html
+++ b/photographer.html
@@ -13,26 +13,12 @@
   <body>
     <div class="containeur">
       <header>
-        <img src="assets/images/logo.png" alt="Logo" class="logo1" />
+        <a href="index.html">
+          <img src="assets/images/logo.png" alt="Logo" class="logo1" />
+        </a>
       </header>
       <main id="main">
-        <div class="photograph-header">
-          <div class="title-info-person">
-            <span class="person-span1">Mimi Keel</span>
-            <span class="person-span2">London, UK</span>
-            <span class="person-span3">Voir le beau dans le quotidien</span>
-          </div>
-          <button class="contact_button" onclick="displayModal()">
-            Contactez-moi
-          </button>
-          <div class="image-person">
-            <img
-              src="img/user.svg"
-              alt="Mimi Keel"
-              class="image-person-photo"
-            />
-          </div>
-        </div>
+        <div class="photograph-header"></div>
         <div class="trier">
           <div class="trier-par">Trier par</div>
           <div class="btn-trier">
@@ -40,48 +26,7 @@
           </div>
         </div>
         <div class="containeur-images">
-          <div class="containte-images">
-            <div class="image1">
-              <img
-                src="images_video-mimi/Animals_Rainbow.jpg"
-                alt="Rainbow"
-                class="image-size"
-              />
-            </div>
-            <span class="img-title">Arc-en-cie</span>
-            <span class="img-nubmbre">11</span>
-            <span class="img-heart"
-              ><img src="img/heart.svg" alt="Heart"
-            /></span>
-          </div>
-          <div class="containte-images">
-            <div class="image1">
-              <img
-                src="images_video-mimi/Travel_Lonesome.jpg"
-                alt="Rainbow"
-                class="image-size"
-              />
-            </div>
-            <span class="img-title">Solitude</span>
-            <span class="img-nubmbre">12</span>
-            <span class="img-heart"
-              ><img src="img/heart.svg" alt="Heart"
-            /></span>
-          </div>
-          <div class="containte-images">
-            <div class="image1">
-              <img
-                src="images_video-mimi/Animals_Rainbow.jpg"
-                alt="Rainbow"
-                class="image-size"
-              />
-            </div>
-            <span class="img-title">Arc-en-cie</span>
-            <span class="img-nubmbre">11</span>
-            <span class="img-heart"
-              ><img src="img/heart.svg" alt="Heart"
-            /></span>
-          </div>
+          <!-- Code in JS -->
         </div>
       </main>
     </div>
@@ -118,5 +63,6 @@
       </div>
     </div>
     <script src="/scripts/utils/contactForm.js"></script>
+    <script src="/scripts/pages/photographer.js"></script>
   </body>
 </html>
